# devoluciones

./: pyproject.toml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
config.egg-info/: SOURCES.txt
devoluciones.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
